# ParseM

./: .gitignore  MANIFEST.in  README.md  setup.py
c/: Makefile  Makefile.in  bamParser.c  bamParser.h  configure  configure.ac  example.c  pairedLink.c  pairedLink.h  stats.h
c/bam/: Makefile  Makefile.in  bamParser.c  bamParser.h  configure  configure.ac  example.c  pairedLink.c  pairedLink.h
c/bam/m4/: ax_libcfu.m4  ax_libhts.m4
parsem/: BamParser.py  ContigParser.py  NucMerParser.py  ParseM.py
test/data/: cut_1_1.bam  cut_1_1.bam.bai  cut_1_2.bam  cut_1_2.bam.bai  cut_1_3.bam  cut_1_3.bam.bai  cut_1_4.bam  cut_1_4.bam.bai  phix174_1_cut.fa  sample1.fa  sample2.fa  sample3.fa  sample4.fa  sample5.fa
